feat: add video previz

--- a/interactive.html
+++ b/interactive.html
@@ -34,6 +34,13 @@
         right: 0;
         z-index: 1000;
       ">
+        <div class="video-container"
+            style="position: fixed; z-index: 2; top: 0.75em; left: 0.75em; border: 0.2rem solid rgb(0, 0, 0); overflow: hidden; border-radius: 0.3rem; padding: 0px;">
+            <div
+                style="text-align: center; position: absolute; top: 0px; border: 0.2rem solid rgb(0, 0, 0); background-color: rgb(255, 255, 255); border-bottom-right-radius: 0.3rem; font-size: 1.1em; color: rgb(0, 0, 0); font-family: Inter; padding: 0.2em 0.5em; white-space: nowrap; font-weight: 600;">
+                Input video</div>
+            <div class="video-wrapper"></div>
+        </div>
         <div class="iframe-wrapper"></div>
         <div class="hide-on-touchscreens" style="
           display: flex;
