--- a/interactive.html
+++ b/interactive.html
@@ -35,11 +35,11 @@
         z-index: 1000;
       ">
         <div class="video-container"
-            style="position: fixed; z-index: 2; top: 0.75em; left: 0.75em; border: 0.2rem solid rgb(0, 0, 0); overflow: hidden; border-radius: 0.3rem; padding: 0px;">
-            <div class="video-caption"
-                style="text-align: center; position: absolute; top: 0px; border-bottom: 0.2rem solid rgb(0, 0, 0); border-right: 0.2rem solid rgb(0, 0, 0); background-color: rgb(255, 255, 255); border-bottom-right-radius: 0.3rem; font-size: 1.1em; color: rgb(0, 0, 0); font-family: Inter; padding: 0.2em 0.5em; white-space: nowrap; font-weight: 600;">
-                Input video</div>
+            style="position: fixed; z-index: 2; top: 0.75em; left: 0.75em; border: 0.2rem solid rgb(0, 0, 0); overflow: hidden; border-radius: 0.3rem; padding: 0px; background-color: rgb(255, 255, 255);">
             <div class="video-wrapper"></div>
+            <div class="video-caption"
+                style="text-align: center; position: absolute; bottom: 0px; border-top: 0.2rem solid rgb(0, 0, 0); border-right: 0.2rem solid rgb(0, 0, 0); background-color: rgb(255, 255, 255); border-top-right-radius: 0.3rem; font-size: 1.1em; color: rgb(0, 0, 0); font-family: Inter; padding: 0.2em 0.5em; white-space: nowrap; font-weight: 600;">
+                Input video</div>
         </div>
         <div class="iframe-wrapper"></div>
         <div class="hide-on-touchscreens" style="
