--- a/interactive.html
+++ b/interactive.html
@@ -59,6 +59,8 @@
                 to move
             </div>
             <div><i class="ti ti-zoom"></i> <strong>Scroll</strong> to zoom</div>
+            <div><strong>G</strong> for generation, <strong>I</strong> for interpolation, <strong>A</strong> for
+                autocompletion</div>
         </div>
         <div class="results-selector">
             <button class="results-prev">
